# rust-ispell

./: .gitignore  .travis.yml  Cargo.toml  ChangeLog.md  README.md
docs/: search-index.js
docs/doc/: sidebar-items.js  struct.IspellError.html
docs/doc/error/: type.Result.html
docs/doc/ispell_result/: enum.IspellResult.html
docs/doc/spell_checker/: struct.SpellChecker.html
docs/implementors/core/cmp/: trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/ops/: trait.Drop.js
docs/implementors/std/error/: trait.Error.js
docs/ispell/: SpellLauncher.t.html  enum.IspellResult.html  index.html  sidebar-items.js  struct.Error.html  struct.IspellError.html  struct.SpellChecker.html  struct.SpellLauncher.html  type.Result.html
docs/ispell/error/: struct.Error.html
docs/ispell/ispell_result/: IspellError.t.html  IspellResult.t.html  struct.IspellError.html
docs/ispell/spell_checker/: SpellChecker.t.html
docs/ispell/spell_launcher/: struct.SpellLauncher.html
docs/src/ispell/src/: async_reader.rs.html  error.rs.html  ispell_result.rs.html  lib.rs.html  spell_checker.rs.html  spell_launcher.rs.html
examples/: dict.rs  readme.rs  simple.rs  timeout.rs
src/: async_reader.rs  error.rs  ispell_result.rs  lib.rs  spell_checker.rs  spell_launcher.rs
tests/: spell_check.rs
