[package]
name = "ispell"
version = "0.1.0"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
description = "Easily run ispell or aspell from Rust"
readme = "README.md"
keywords = ["ispell", "aspell", "spellchecker"]
repository = "https://github.com/lise-henry/rust-ispell"
documentation = "https://lise-henry.github.io/rust-ispell/ispell/"
license = "MPL-2.0"
exclude = ["docs/**"]
